Add profile page & modify registered.js

--- a/src/main/webapp/resources/theme/css/common.css
+++ b/src/main/webapp/resources/theme/css/common.css
@@ -41,3 +41,12 @@
 .inputDiv3 {
   margin-left: 47px;
 }
+
+.labelDoubl1{
+	position: absolute;
+	left:498px;
+}
+
+.labelDoubl2{
+	margin-left: 3px;
+}
